--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
            } 
         }
 
-        stage('stage 3') { 
+        stage('manual approval') { 
            steps{ 
               timeout(time: 60, unit: 'MINUTES') {
                 input message: "Move to stage 3?"
