Fix NEXUS server in Jenkinsfile for books microservice

--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -14,7 +14,8 @@ pipeline {
         DEV_PROJECT = "kunal-kapoor-81-books--dev"
         STAGE_PROJECT = "kunal-kapoor-81-books-stage"
         APP_GIT_URL = "https://github.com/kunalkapoor81/DO288-apps"
-        NEXUS_SERVER = "https://nexus-common.apps.ocp-ap3.prod.nextcle.com/repository/nodejs"
+       // NEXUS_SERVER = "http://nexus-common.apps.ocp-ap3.prod.nextcle.com/repository/nodejs"
+         //NEXUS_SERVER = "/repository/nodejs"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "books"
